[tool.poetry]
name = "heic_converter"
version = "0.1.0"
description = "heic image converter"
authors = ["Dahir Muhammad Dahir <dahirmuhammad3@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.1"
fastapi = {extras = ["all"], version = "^0.89.1"}
pillow-heif = "^0.9.3"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
mypy = "^0.770"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
